--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.5.7",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {},
